스키마 변경에 따른 API및 문서 변경
